Added installWithLauncherScripts that uses the gradle application plugin to create working xec/xcc executable scripts for all platforms. (#289)